fix urls and update readme

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    </head>
    <body>
      <p style="font-family: 'Roboto', sans-serif; font-size:120%; text-align:center"> 
-         <a href="https://10zigettorer.github.io/">
-         <img src="https://10zigettorer.github.io/data/ettorerobertorizza.png" alt="Ettore Rizza" class="avatar"></a>
+         <a href="contacts/data/ettorerobertorizza.vcf">
+         <img src="contacts/data/ettorerobertorizza.png" alt="Ettore Rizza" class="avatar"></a>
         <br><br>
       </p>
       <center>
