--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <center>
          <figure>
             <a href="data/ettorerobertorizza.vcf" title="Scan or click on QR to save vcard to your phone/PC">
-            <img src="data/qrettorerobertorizzalr.png" alt="Scan me to add contact into your phone">
+            <img src="data/qrettorerobertorizzalr.png" alt="Scan me to add contact into your phone" width="500" height="500">
             </a>
             <figcaption>Scan or click on QR</figcaption>
          </figure>
